--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
 install:
+  - pip install flake8
   - python setup.py install
-script: python setup.py test
+script:
+  - python setup.py test
+  - flake8 .
+notifications:
+  email:
+    - ci-notify@openlabs.co.in
