--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.6"
   - "2.7"
 install:
+  - CFLAGS="-O0" pip install lxml
   - pip install flake8
   - python setup.py install
   - pip install coveralls
